--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -2,11 +2,11 @@
   "profiles": {
     "Server": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:51036;http://localhost:51037"
+      "applicationUrl": "http://localhost:6000"
     }
   }
 }
