--- a/Server/Warehouse.csproj
+++ b/Server/Warehouse.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.11.0.3-beta" />
+    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.11.0.4-beta" />
     <!--<ProjectReference Include="..\..\..\SOURCE-CONTROL\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />-->
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
