--- a/Server/Warehouse.csproj
+++ b/Server/Warehouse.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.11.0.5-beta" />
+    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.11.0.6-beta" />
+    <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />-->
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
 
