--- a/Client/StoreFront.csproj
+++ b/Client/StoreFront.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.11.0.6-beta" />
+    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.*" />
     <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />-->
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
