void command added

--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints.Messaging.Core" Version="5.*" />
-    <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Core\FastEndpoints.Messaging.Core.csproj" />-->
+    <!--<PackageReference Include="FastEndpoints.Messaging.Core" Version="5.*" />-->
+    <ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Core\FastEndpoints.Messaging.Core.csproj" />
   </ItemGroup>
 
 </Project>
