remote pub/sub messaging added

--- a/Client/StoreFront.csproj
+++ b/Client/StoreFront.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.*" />-->
-    <ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />
+    <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.*" />
+    <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />-->
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
   
