move extensions to separate pkg

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote.Testing\FastEndpoints.Messaging.Remote.Testing.csproj" />
       <ProjectReference Include="..\Source\Client\StoreFront.csproj" />
       <ProjectReference Include="..\Source\Contracts\Contracts.csproj" />
       <ProjectReference Include="..\Source\Server\Warehouse.csproj" />
