--- a/Source/Client/StoreFront.csproj
+++ b/Source/Client/StoreFront.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.*" />
+        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.27.0" />
         <!--<ProjectReference Include="..\..\..\FastEndpoints\Library\Src\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj" />-->
         <ProjectReference Include="..\Contracts\Contracts.csproj" />
     </ItemGroup>
