--- a/Source/Contracts/Contracts.csproj
+++ b/Source/Contracts/Contracts.csproj
@@ -9,8 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Core" Version="5.27.0" />
-        <!--<ProjectReference Include="..\..\..\FastEndpoints\Library\Src\Messaging.Core\FastEndpoints.Messaging.Core.csproj" />-->
+        <PackageReference Include="FastEndpoints.Messaging.Core" Version="5.27.0.12-beta"/>
+        <!-- <ProjectReference Include="..\..\..\FastEndpoints\Src\Messaging\Messaging.Core\FastEndpoints.Messaging.Core.csproj"/> -->
     </ItemGroup>
 
 </Project>
