--- a/Source/Server/Warehouse.csproj
+++ b/Source/Server/Warehouse.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.27.0.12-beta"/>
+        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.30.0" />
         <!-- <ProjectReference Include="..\..\..\FastEndpoints\Src\Messaging\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj"/> -->
         <ProjectReference Include="..\Contracts\Contracts.csproj"/>
     </ItemGroup>
