--- a/Source/Server/Warehouse.csproj
+++ b/Source/Server/Warehouse.csproj
@@ -8,9 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.30.0" />
-        <!-- <ProjectReference Include="..\..\..\FastEndpoints\Src\Messaging\Messaging.Remote\FastEndpoints.Messaging.Remote.csproj"/> -->
-        <ProjectReference Include="..\Contracts\Contracts.csproj"/>
+        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.34.0.8-beta"/>
+        <!-- <ProjectReference Include="..\Contracts\Contracts.csproj"/> -->
     </ItemGroup>
 
 </Project>
