upgrade to net9.0 and latest deps

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
@@ -9,25 +9,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.10" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-        <PackageReference Include="xunit" Version="2.9.2" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.2">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+        <PackageReference Include="xunit.v3" Version="1.1.0"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="FastEndpoints.Messaging.Remote.Testing" Version="5.30.0" />
-      <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote.Testing\FastEndpoints.Messaging.Remote.Testing.csproj" />-->
-      <ProjectReference Include="..\Source\Client\StoreFront.csproj" />
-      <ProjectReference Include="..\Source\Contracts\Contracts.csproj" />
-      <ProjectReference Include="..\Source\Server\Warehouse.csproj" />
+        <PackageReference Include="FastEndpoints.Messaging.Remote.Testing" Version="5.35.0"/>
+        <!--<ProjectReference Include="..\..\FastEndpoints\Library\Src\Messaging.Remote.Testing\FastEndpoints.Messaging.Remote.Testing.csproj" />-->
+        <ProjectReference Include="..\Source\Client\StoreFront.csproj"/>
+        <ProjectReference Include="..\Source\Contracts\Contracts.csproj"/>
+        <ProjectReference Include="..\Source\Server\Warehouse.csproj"/>
     </ItemGroup>
 
 </Project>
