--- a/Source/Contracts/Contracts.csproj
+++ b/Source/Contracts/Contracts.csproj
@@ -3,13 +3,13 @@
     <PropertyGroup>
         <NoWarn>CS1591;CS8618</NoWarn>
         <OutputType>Library</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Core" Version="5.34.0.8-beta"/>
+        <PackageReference Include="FastEndpoints.Messaging.Core" Version="5.35.0"/>
         <!-- <ProjectReference Include="..\..\..\FastEndpoints\Src\Messaging\Messaging.Core\FastEndpoints.Messaging.Core.csproj"/> -->
     </ItemGroup>
 
