--- a/Source/Server/Warehouse.csproj
+++ b/Source/Server/Warehouse.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.34.0.8-beta"/>
-        <!-- <ProjectReference Include="..\Contracts\Contracts.csproj"/> -->
+        <PackageReference Include="FastEndpoints.Messaging.Remote" Version="5.35.0"/>
+        <ProjectReference Include="..\Contracts\Contracts.csproj"/>
     </ItemGroup>
 
 </Project>
